# pkai

./: .gitignore  CMakeLists.txt  README.md
custom/source/: main.cpp  main.cu
header/device/: error_check.hpp  heap.hpp
header/pkai/: allocators.hpp  common.hpp  config.hpp  functions.hpp  helpers.hpp  indexers.hpp  layer.hpp  network.hpp  training_set.hpp
header/pkai/activation_function/: base.hpp  fast_sigmoid.hpp  linear.hpp  relu.hpp  sigmoid.hpp  signed_fast_sigmoid.hpp  signed_sigmoid.hpp  tanh.hpp
header/pkai/connection/host/: fully_connected.hpp  square_convolution.hpp
header/pkai/construction/: layer.hpp
header/pkai/construction/allocators/: host_allocator.hpp
header/pkai/construction/connection/host/: fully_connected.hpp
header/pkai/network/: host_network.hpp  network.hpp
header/pkai/training/: training_dataset.hpp  training_pair.hpp
lib/: CMakeLists.txt
lib/pkai/: CMakeLists.txt
lib/pkai/header/pkai/: device.hpp  host.hpp
lib/pkai/header/pkai/device/: _device_check.hpp  allocator.hpp  dataset.hpp
lib/pkai/header/pkai/device/connection/: fully_connected.hpp
lib/pkai/header/pkai/host/: _host_check.hpp  allocator.hpp  dataset.hpp
lib/pkai/header/pkai/host/connection/: fully_connected.hpp
lib/pkai/header/pkai/universal/: config.hpp  dataset.hpp  layer.hpp  network.hpp  network_builder.hpp
lib/pkai/header/pkai/universal/activation_function/: leaky_relu.hpp  linear.hpp  relu.hpp  sigmoid.hpp  step.hpp
lib/pkai/header/pkai/universal/connection/: fully_connected.hpp
lib/pkai/pkai/: config.hpp  network.hpp
lib/pkai/pkai/construction/: network_builder.hpp
lib/pkai/pkai/construction/allocators/: device_allocator.hpp
lib/pkai/pkai/construction/connection/host/: fully_connected.hpp
lib/pkai/pkai/device/: device_new.hpp
lib/pkai/pkai/training/: trainer.hpp
projects/: CMakeLists.txt
projects/cifar10/: CMakeLists.txt  cifar10.hpp  main.cpp
projects/cifar10-tester/: CMakeLists.txt  main.cpp
projects/device_test/: CMakeLists.txt  main.cpp
projects/musician/: CMakeLists.txt  main.cpp  stylizer.hpp
projects/pklm/: CMakeLists.txt  main.cpp  tokenizer.hpp
projects/ticktacktoe/: CMakeLists.txt  game.cpp  game.hpp  main.cpp
projects/xor/: CMakeLists.txt  main.cpp
shrapnel/: common.hpp  layer.hpp  network.hpp
shrapnel/connection/: fully_connected.hpp
source/: main.cpp
source/pkai/: activate.cu  backpropagate.cu  io.cu  network.cu  print.cpp  randomize.cpp  run.cpp  save.cpp  training_set.cpp
